     - [11942] Build issues with GSL on OSX due to 32/64 bits architecture
     - [11943] Build issues with libjpeg on OSX due to 32/64 bits architecture
     - [11944] Build issues with libpng on OSX due to 32/64 bits architecture
     - [11981] vpV4l2Grabber class based on video 4 linux 2 is not able to
       grab images from an usb webcam
----------------------------------------------
ViSP 2.6.0 (released September 23rd, 2010)
  - License:
      Change the open source license from QPL to GPL v2
  - New Features
    - Introduction of a new wireframe simulator. See vpWireFrameSimulator class.
    - Introduction of a new model-based tracker that allows to track
      an object based on its 3D model. See vpMbEdgeTracker class.
    - New vpForceTwistMatrix class that allows to transfer a force/torque skew
      from one frame to another.
    - New vpVelocityTwistMatrix class that allows to transfer a velocity skew
      from one frame to an other. The vpTwistMatrix class that does the same
      work previously is from now deprecated.
    - New vpRobotCycab class to communicate with the Cycab car-like mobile
      robot at Inria.
    - New generic vpRobotSimulator class to create robot simulators.
    - New vpSimulatorViper850 class which simulates the viper850 robot.
    - New vpSimulatorAfma6 class which simulates the Afma 6dof robot.
    - New vpPlanarObjectDetector class to detect a planar surface based on
      the Ferns Classifier.
    - New vpSickLDMRS class, a UNIX driver to get measures from a Sick LD-MRS
      laser scanner.
    - New vpPlot class that was recoded to suppress the XPlotter dependency.
      This class aims real time drawing of 2D or 3D graphics under Linux, OSX
      and Windows.
  - Third party library dependencies
    - OpenCV 1.1 and 2.0 are no more supported. ViSP requires at least OpenCV 2.1.
    - libplotter is no longer required.
    - Itifg8 is no longer supported.
  - Improvements